// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 QhRDE"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dKXHxp"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dZMfQL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 jvLlVG"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 cJkpq"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hfeySC"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBYNKn"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 ikhFiW"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kXVAcb"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 bDQcwE"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 izOalw"
            >
              <a
                class="StyledButton-sc-323bzc-0 fbuytQ"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kjonhx"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 gSsoUf"
      >
        <span
          class="StyledText-sc-1sadyjn-0 hvLNvj"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kjonhx"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dZMfQL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 btQNee FileInput__ContentsBox-sc-1jzq7im-0 kGErCx"
        >
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 jiaCRr"
            type="file"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 jYVGif"
          >
            <span
              class="StyledText-sc-1sadyjn-0 ddWZXK FileInput__Message-sc-1jzq7im-2 eQgcKP"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 ehsigv"
              tabindex="-1"
            >
              browse
            </a>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kjonhx"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 ggcKV"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dZMfQL"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fRzXAO"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 dFFSsD"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 SPZOm"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 tMflY"
            >
              <svg
                aria-label="Bar meter with values 0, 0, 0, 0, 0, 0, 0 out of 100"
                class="StyledMeter-sc-nsxarx-0 miTLV"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
              />
              <span
                class="StyledText-sc-1sadyjn-0 juYoGh"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kjonhx"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 dZMfQL"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 dbLOxT"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 djTDjU"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 goWrNb"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 QhRDE"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dKXHxp"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dZMfQL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 lfABzo"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 cJkpq"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hfeySC"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBYNKn"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 ikhFiW"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kXVAcb"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 izOalw"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 hNaRlg"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 goWrNb"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jJMajl FormField__FormFieldBox-sc-m9hood-0 iWUDpR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kdgUbe"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fyOzHn FormField__FormFieldContentBox-sc-m9hood-1 cxiqWq"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gcUiwQ"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 bXwWgM"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kNtCvU"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 cwFOsa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 eqcBvA"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 cPZwve StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jJMajl FormField__FormFieldBox-sc-m9hood-0 iWUDpR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kdgUbe"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gERgyG FormField__FormFieldContentBox-sc-m9hood-1 hrVpMh"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bVWETU"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cwFOsa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 eqcBvA"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cPZwve StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cPZwve StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jJMajl FormField__FormFieldBox-sc-m9hood-0 iWUDpR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kdgUbe"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fyOzHn FormField__FormFieldContentBox-sc-m9hood-1 hrVpMh"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 eVwmj StyledSelect__StyledSelectDropButton-sc-znp66n-5 ehdLEn"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 igOwdA"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 cVoXzm"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gcUiwQ"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 eRBumP StyledSelect__SelectTextInput-sc-znp66n-4 bDUGdd"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 idcWnv"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 jLyKIv"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 vDozn"
          >
            <button
              class="StyledButton-sc-323bzc-0 fbuytQ"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 QhRDE"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dKXHxp"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dZMfQL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 lfABzo"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 cJkpq"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hfeySC"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hBYNKn"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 ikhFiW"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kXVAcb"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 izOalw"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 hNaRlg"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 goWrNb"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jJMajl FormField__FormFieldBox-sc-m9hood-0 iWUDpR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kdgUbe"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fyOzHn FormField__FormFieldContentBox-sc-m9hood-1 cxiqWq"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gcUiwQ"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 bXwWgM"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kNtCvU"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 cwFOsa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 eqcBvA"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 cPZwve StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jJMajl FormField__FormFieldBox-sc-m9hood-0 iWUDpR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kdgUbe"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gERgyG FormField__FormFieldContentBox-sc-m9hood-1 hrVpMh"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bVWETU"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cwFOsa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 eqcBvA"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cPZwve StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ePwewi"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jkMDxk StyledRadioButton-sc-g1f6ld-5 csPPCC"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 bSAvtm"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 cPZwve StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cmgBqV"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jJMajl FormField__FormFieldBox-sc-m9hood-0 iWUDpR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kdgUbe"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fyOzHn FormField__FormFieldContentBox-sc-m9hood-1 hrVpMh"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 eVwmj StyledSelect__StyledSelectDropButton-sc-znp66n-5 ehdLEn"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 igOwdA"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 cVoXzm"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gcUiwQ"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 eRBumP StyledSelect__SelectTextInput-sc-znp66n-4 bDUGdd"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 idcWnv"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 jLyKIv"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 vDozn"
          >
            <button
              class="StyledButton-sc-323bzc-0 fbuytQ"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 QhRDE"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gujfkP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dGxCKE"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jJMajl FormField__FormFieldBox-sc-m9hood-0 iWUDpR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kdgUbe"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fyOzHn FormField__FormFieldContentBox-sc-m9hood-1 hrVpMh"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: empty page"
                class="StyledButton-sc-323bzc-0 eVwmj StyledSelect__StyledSelectDropButton-sc-znp66n-5 ehdLEn"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 igOwdA"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 cVoXzm"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 kJHgOl"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 jpjXVH"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iyUWcu"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 hUoxJS"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 ipwypk"
                      id="template__input"
                      inert=""
                      name="template"
                      readonly=""
                      type="text"
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 idcWnv"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 jLyKIv"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 dOSxIw"
          >
            <button
              class="StyledButton-sc-323bzc-0 fbuytQ"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 QhRDE"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 cNrwFo"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 cCkSoz"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 fRUhiz"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gnOvAp efQqrN"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 caijRb"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
